# temp

./: README.md  pyproject.toml
figures/1d_arruda_boyce/: 1d_arruda_boyce.ipynb  README.md  benchmark.py  helper.py  run_benchmarks.sh
figures/1d_arruda_boyce/data/: 1d_strain.csv  1d_train.csv
figures/3d_ribbon/: 3d_ribbon.ipynb  README.md  benchmark.py  helper.py  run_benchmarks.sh
figures/3d_ribbon/data/: ribbon.txt  ribbon_data.npz
figures/3d_rod/: 3d_rod.ipynb  README.md  benchmark.py  helper.py  loss_landscape.py  run_benchmarks.sh  run_loss.sh
figures/3d_rod/data/: rod.txt
src/hodel/: __init__.py  hodel.py  root_finders.py
src/hodel/dismech/: __init__.py  animate.py  connectivity.py  state.py  util.py
src/hodel/dismech/legacy/: __init__.py  mass.py  mesh.py  params.py  stiffness.py
src/hodel/dismech/stencils/: __init__.py  hinge.py  stencil.py  triplet.py
