[project]
name = "hodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryanchaiyakul", email = "ryanchaiyakul@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.0",
    "jax>=0.7.0",
    "jaxopt>=0.8.5",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda13]>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flax>=0.12.0",
    "ipykernel>=7.0.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "plotly>=6.4.0",
    "pyvista>=0.46.5",
    "tqdm>=4.67.1",
    "xprof>=2.20.7",
]
